# differentiable-WecOptTool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
differentiable_examples/: check_convex_reformulation.py  check_ffo_conditions.py  tutorial_1_WaveBot_sensitivity.ipynb  tutorial_2_AquaHarmonics_sensitivity.ipynb  tutorial_3_AquaHarmonics_shape_optimization.ipynb  tutorial_4_AquaHarmonics_irregular_sensitivity.ipynb  tutorial_5_AquaHarmonics_PTO_sensitivity.ipynb  tutorial_6_WaveBot_TwoBody_sensitivity.ipynb  tutorial_6_test.ipynb  verify_qp_reformulation.py
differentiable_examples/report/: shape_optimization_report.aux  shape_optimization_report.out  shape_optimization_report.tex  shape_optimization_report.toc
examples/: tutorial_1_WaveBot_sensitivity.ipynb
tests/: test_aquaharmonics_sensitivity.py  test_differentiable_solver.py  test_irregular_waves.py  test_kkt_backward.py  test_parametric.py  test_parametric_utils.py  test_solver_ipopt.py  test_validation.py  test_wavebot_sensitivity.py
wecopttool_differentiable/: __init__.py  parametric.py  parametric_utils.py  qp_kkt.py  sensitivity_plots.py  solver_ipopt.py  validation.py
