[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wecopttool-differentiable"
version = "0.1.0"
description = "Post-optimality sensitivity analysis for WecOptTool via Fiacco envelope theorem and JAX"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"
authors = [
    {name = "Kapil Khanal"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "wecopttool",
    "jax",
    "cyipopt",
    "numpy>=1.20",
    "scipy",
    "xarray",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "matplotlib",
    "capytaine",
]

[tool.pytest.ini_options]
markers = [
    "validation: expensive FD re-solve validation tests (may take minutes)",
]

[tool.setuptools.packages.find]
include = ["wecopttool_differentiable*"]
